# raidprotect

./: .codespellrc  .editorconfig  .gitignore  .gitpod.yml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  localazy.json
.github/: .kodiak.toml  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml  semantic.yml  settings.yml
.github/workflows/: ci.yml  labeler.yml  localazy-download.yml  localazy-upload.yml
.guppy/: hakari.toml
analyzer/: Cargo.toml
analyzer/src/: lib.rs  parser.rs
anti-spam/: Cargo.toml
anti-spam/src/: lib.rs
anti-spam/src/message/: mod.rs
cache/: Cargo.toml
cache/src/: cache.rs  http.rs  lib.rs  message.rs  permission.rs  redis.rs
cache/src/model/: channel.rs  component.rs  guild.rs  message.rs  mod.rs
cache/src/process/: event.rs  resource.rs
captcha/: Cargo.toml
captcha/benches/: generation.rs
captcha/src/: code.rs  lib.rs
event/: Cargo.toml
event/src/: lib.rs
event/src/message/: handle.rs  mod.rs  parser.rs
gateway/: Cargo.toml
gateway/src/: cache.rs  cluster.rs  config.rs  lib.rs  main.rs
gateway/src/cache/: event.rs  mod.rs  resource.rs
gateway/src/cluster/: event.rs  mod.rs  shard.rs
gateway/src/event/: context.rs  mod.rs  model.rs  process.rs
gateway/src/server/: events.rs  handler.rs  listener.rs  mod.rs
handler/: Cargo.toml  build.rs
handler/src/: lib.rs
handler/src/automod/: handle.rs  mod.rs
handler/src/command/: mod.rs
handler/src/embed/: error.rs  kick.rs  mod.rs
handler/src/interaction/: callback.rs  context.rs  handle.rs  help.rs  mod.rs  response.rs
handler/src/interaction/command/: help.rs  kick.rs  mod.rs  profile.rs
handler/src/interaction/component/: post_in_chat.rs
interaction/: Cargo.toml
interaction/src/: context.rs  handle.rs  lib.rs  response.rs
interaction/src/command/: help.rs  kick.rs  mod.rs  profile.rs
interaction/src/component/: mod.rs  post_in_chat.rs
interaction/src/embed/: error.rs  kick.rs  mod.rs
model/: Cargo.toml
model/src/: cache.rs  config.rs  event.rs  interaction.rs  lib.rs  mongodb.rs  serde.rs  state.rs
model/src/cache/: channel.rs  client.rs  guild.rs  http.rs  message.rs  mod.rs  partial.rs  permission.rs  redis.rs  role.rs
model/src/cache/discord/: client.rs  http.rs  mod.rs  permission.rs
model/src/cache/discord/model/: channel.rs  guild.rs  mod.rs
model/src/cache/discord/process/: event.rs  mod.rs  resource.rs
model/src/cache/model/: channel.rs  component.rs  guild.rs  interaction.rs  message.rs  mod.rs
model/src/cache/process/: event.rs  mod.rs  resource.rs
model/src/collection/: guild.rs  mod.rs  serde_helpers.rs
model/src/database/: client.rs  guild.rs  mod.rs  modlog.rs
model/src/interaction/: component.rs  mod.rs  response.rs
model/src/mongodb/: client.rs  guild.rs  mod.rs  modlog.rs
model/tests/: guild.rs  modlog.rs
raidprotect/: Cargo.toml  build.rs
raidprotect/locales/: en.json  fr.json
raidprotect/src/: cluster.rs  config.rs  main.rs  shard.rs  shutdown.rs
raidprotect/src/event/: mod.rs  process.rs
raidprotect/src/event/captcha/: channel.rs  member_add.rs  mod.rs
raidprotect/src/event/message/: handle.rs  mod.rs  old_command.rs  parser.rs
raidprotect/src/feature/: captcha.rs  mod.rs
raidprotect/src/interaction/: context.rs  handle.rs  mod.rs  response.rs  util.rs
raidprotect/src/interaction/command/: about.rs  help.rs  kick.rs  mod.rs  profile.rs
raidprotect/src/interaction/command/config/: captcha.rs  mod.rs
raidprotect/src/interaction/command/moderation/: kick.rs  mod.rs
raidprotect/src/interaction/component/: mod.rs  post_in_chat.rs
raidprotect/src/interaction/component/captcha/: disable.rs  enable.rs  mod.rs  modal.rs  verify.rs
raidprotect/src/interaction/embed/: captcha.rs  error.rs  kick.rs  mod.rs
raidprotect/src/util/: logs_channel.rs  mod.rs  resource.rs  text.rs
state/: Cargo.toml
state/src/: lib.rs
translations/: Cargo.toml  fr.json
translations/locales/: fr.json
translations/src/: lib.rs
transport/: Cargo.toml
transport/src/: cache.rs  lib.rs  model.rs
transport/src/client/: cache.rs  client.rs  connect.rs  error.rs  gateway.rs  mod.rs
transport/src/server/: events.rs  handler.rs  listener.rs  mod.rs
util/: Cargo.toml
util/src/: lib.rs  logging.rs  logs_channel.rs  resource.rs  serde.rs  shutdown.rs  text.rs
web/: Cargo.toml
web/src/: main.rs
workspace-hack/: Cargo.toml
