[package]
name = "raidprotect-analyzer"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
any_ascii = "0.3"
linkify = "0.8"
twilight-model = "0.10"
unicode-segmentation = "1.9"
url = "2.2"
