[package]
name = "raidprotect-cache"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
twilight-model = "0.10"
url = "2.2"
