[package]
name = "raidprotect-cache"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ttl = { git = "https://github.com/baptiste0928/async-ttl" }
dashmap = "5.1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
twilight-model = "0.10"
twilight-util = { version = "0.10", features = ["permission-calculator"] }
url = "2.2"
