[package]
name = "raidprotect-cache"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-util = { path = "../util" }

async-ttl = { git = "https://github.com/baptiste0928/async-ttl" }
bb8 = "0.8"
bb8-redis = "0.11"
dashmap = "5.1"
redis = { version = "0.21", features = ["tokio-comp"] }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
twilight-model = "0.10"
twilight-util = { version = "0.10", features = ["permission-calculator"] }
url = "2.2"

rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }
serde_with = "1"
zstd = "0.11"
