[package]
name = "raidprotect-captcha"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.2", features = ["png"], default-features = false }
imageproc = { version = "0.23.0", default-features = false }
rand = "0.8.5"

argh = { version = "0.1.8", optional = true}

[features]
cli = ["argh", "imageproc/display-window"]

[[bin]]
name = "captcha-cli"
path = "bin/cli.rs"
required-features = ["cli"]
