[package]
name = "raidprotect-captcha"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.4", features = ["png"], default-features = false }
imageproc = { version = "0.23.0", default-features = false }
once_cell = "1.15.0"
rand = "0.8.5"
rusttype = "0.9.2"

argh = { version = "0.1.9", optional = true}

[dev-dependencies]
criterion = "0.4.0"

[features]
cli = ["argh", "imageproc/display-window"]

[[bin]]
name = "captcha-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bench]]
name = "generation"
harness = false
