[package]
name = "raidprotect-event"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-cache = { path = "../cache" }
raidprotect-model = { path = "../model" }

twilight-model = "0.10"

any_ascii = "0.3"
linkify = "0.8"
unicode-segmentation = "1.9"
url = "2.2"
