[package]
name = "raidprotect_gateway"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect_model = { path = "../model" }
raidprotect_transport = { path = "../transport" }
raidprotect_util = { path = "../util" }
workspace-hack = { path = "../workspace-hack"}

anyhow = "1"
async-trait = "0.1"
dashmap = "4"
figment = { version = "0.10", features = ["env", "toml"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "sync"] }
tracing = { version = "0.1" }

twilight-model = "0.8"
twilight-gateway = "0.8"
twilight-http = "0.8"
