[package]
name = "raidprotect-handler"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-model = { path = "../model" }

rosetta-i18n = "0.1"
thiserror = "1"
tracing = "0.1"
twilight-interactions = "0.10"
twilight-model = "0.10"
twilight-http = "0.10"
twilight-util = { version = "0.10.1", features = ["builder", "snowflake"] }
twilight-validate = "0.10"

[build-dependencies]
rosetta-build = "0.1"
