[package]
name = "raidprotect-interaction"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-cache = { path = "../cache" }
raidprotect-model = { path = "../model" }
raidprotect-state = { path = "../state" }
raidprotect-translations = { path = "../translations" }
raidprotect-util = { path = "../util" }

nanoid = "0.4"
thiserror = "1"
tracing = "0.1"
twilight-interactions = "0.10"
twilight-model = "0.10"
twilight-http = "0.10"
twilight-util = { version = "0.10.1", features = ["builder", "snowflake"] }
twilight-validate = "0.10"
