[package]
name = "raidprotect-model"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.60", features = ["backtrace"] }
async-trait = "0.1.57"
mongodb = { version = "2.3.0", features = ["zlib-compression"] }
tracing = "0.1.36"

# Models
serde = { version = "1.0.142", features = ["derive"] }
serde_with = "1.14.0"
time = "0.3.12"
url = { version = "2.2.2", features = ["serde"] }

# Redis (client + serialization)
bb8 = "0.8.0"
bb8-redis = "0.11.0"
redis = { version = "0.21.5", features = ["tokio-comp"], default-features = false }
rmp-serde = "1.1.0"

# Twilight
twilight-http = { version = "0.13.0", features = ["rustls-webpki-roots", "decompression"], default-features = false }
twilight-model = "0.13.0"
twilight-util = { version = "0.13.0", features = ["permission-calculator"] }
twilight-validate = "0.13.0"

# Configuration
dotenv = "0.15.0"
envy = "0.4.2"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", features = ["std", "fmt", "ansi"], default-features = false }


[dev-dependencies]
serde_test = "1.0.142"
pretty_assertions = "1.2.1"
