[package]
name = "raidprotect"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-captcha = { path = "../captcha" }
raidprotect-model = { path = "../model" }

anyhow = { version = "1.0.61", features = ["backtrace"] }
async-trait = "0.1.57"
once_cell = "1.13.0"
rosetta-i18n = "0.1.2"
time = "0.3.13"

# Tokio ecosystem
futures = "0.3.23"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1.36"

# Twilight
twilight-gateway = { version = "0.13.0", features = ["rustls-webpki-roots", "zlib-stock"], default-features = false }
twilight-http = { version = "0.13.0", features = ["rustls-webpki-roots", "decompression"], default-features = false }
twilight-interactions = "0.13.0"
twilight-mention = "0.13.0"
twilight-model = "0.13.0"
twilight-util = { version = "0.13.0", features = ["builder", "snowflake"] }

# Message parsing
any_ascii = "0.3.1"
linkify = "0.9.0"
unicode-segmentation = "1.9.0"
url = "2.2.2"

[build-dependencies]
rosetta-build = "0.1.2"
