[package]
name = "raidprotect"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-captcha = { path = "../captcha" }
raidprotect-model = { path = "../model" }

anyhow = { version = "1.0.64", features = ["backtrace"] }
once_cell = "1.14.0"
rosetta-i18n = "0.1.2"
time = "0.3.14"

# Async
async-trait = "0.1.57"
futures-util = { version = "0.3.24", default-features = false }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1.36"

# Twilight
twilight-gateway = { rev = "d4113302", git = "https://github.com/twilight-rs/twilight", features = ["twilight-http", "rustls-webpki-roots", "zlib-stock"], default-features = false }
twilight-http = { rev = "d4113302", git = "https://github.com/twilight-rs/twilight", features = ["rustls-webpki-roots", "decompression"], default-features = false }
twilight-interactions = { rev = "9315604f", git = "https://github.com/baptiste0928/twilight-interactions"}
twilight-mention = { rev = "d4113302", git = "https://github.com/twilight-rs/twilight" }
twilight-model = { rev = "d4113302", git = "https://github.com/twilight-rs/twilight" }
twilight-util = { rev = "d4113302", git = "https://github.com/twilight-rs/twilight", features = ["builder", "snowflake"] }

# Message parsing
any_ascii = "0.3.1"
linkify = "0.9.0"
unicode-segmentation = "1.9.0"
url = "2.3.1"

[build-dependencies]
rosetta-build = "0.1.2"
