[package]
name = "raidprotect"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-captcha = { path = "../captcha" }
raidprotect-model = { path = "../model" }

anyhow = { version = "1.0.66", features = ["backtrace"] }
once_cell = "1.15.0"
rosetta-i18n = "0.1.2"
time = "0.3.15"

# Async
async-trait = "0.1.58"
futures-util = { version = "0.3.25", default-features = false }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1.37"

# Twilight
twilight-gateway = { version = "0.13.3", features = ["rustls-webpki-roots", "zlib-stock"], default-features = false }
twilight-http = { version = "0.13.2", features = ["rustls-webpki-roots", "decompression"], default-features = false }
twilight-interactions = "0.13.0"
twilight-mention = "0.13.0"
twilight-model = "0.13.5"
twilight-util = { version = "0.13.3", features = ["builder", "snowflake"] }

# Message parsing
any_ascii = "0.3.1"
linkify = "0.9.0"
unicode-segmentation = "1.10.0"
url = "2.3.1"

[build-dependencies]
rosetta-build = "0.1.2"
