[package]
name = "raidprotect-state"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-model = { path = "../model" }

twilight-http = "0.11"
twilight-model = "0.11"
