[package]
name = "raidprotect-translations"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosetta-i18n = "0.1"

[build-dependencies]
rosetta-build = "0.1"
