[package]
name = "raidprotect-util"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-state = { path = "../state" }
raidprotect-cache = { path = "../cache" }

lazy_static = "1.4"
thiserror = "1"
tokio = { version = "1.17", features = ["sync"] }
twilight-model = "0.10"
