[package]
name = "raidprotect-util"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-model = { path = "../model" }
raidprotect-state = { path = "../state" }
raidprotect-translations = { path = "../translations" }

lazy_static = "1.4"
thiserror = "1"
tokio = { version = "1.17", features = ["sync"] }
twilight-http = "0.11"
twilight-model = "0.11"
twilight-util = { version = "0.11", features = ["builder"] }
twilight-validate = "0.11"
