[package]
name = "raidprotect-web"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raidprotect-model = { path = "../model" }

anyhow = "1.0.60"

# Tokio dependencies
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.36"

# Axum and http dependencies
axum = { version = "0.5.13", features = ["http1", "http2"], default-features = false }
tower-http = { version = "0.3.4", features = ["trace"] }
